<resources>
    <string name="app_name">Duck Hunter</string>
    <string name="hint_email">Enter your email</string>
    <string name="hint_password">Enter your password</string>
    <string name="hint_confirm_password">Confirm your password</string>
    <string name="text_remember_me">Remember me</string>
    <string name="text_start_game">Start game</string>
    <string name="text_new_user">Create New user</string>
    <string name="text_sign_up">Sign up</string>
    <string name="text_back_to_login">Back to the login</string>
    <string name="error_email_required">Email is required</string>
    <string name="error_email_invalid">Ponga un correo electrónico válido</string>
    <string name="error_password_required">Password is required</string>
    <string name="error_password_min_length">The password must have at least 3 characters</string>
    <string name="error_password_min_length_6">la contraseña debe ser mínimo de 6 caracteres</string>
    <string name="error_confirm_password_required">Confirm your password</string>
    <string name="error_passwords_not_match">La contraseña no es igual</string>

    <string name="dialog_title_game_end">End of the game</string>
    <string name="dialog_message_congratulations">Congratulations!!\nYou hunted %1$d ducks</string>
    <string name="button_restart">Restart</string>
    <string name="button_close">Close</string>

    <string name="text_hall_of_fame">Hall of fame</string>
    <string name="text_ducks">Ducks</string>
    <string name="text_player">Player name</string>

    <string name="text_new_game">New Game</string>
    <string name="text_play_online">Play Online</string>
    <string name="text_close">Close</string>


</resources>